# Proyecto10_Juanma_Iriondo_LLM

./: .env.example  README.md  main.py  pyproject.toml
app/llm/: editorial_graph.py  llm_call.py  llm_images.py  llm_stream.py
app/streamlit/: animacion.py  irla.py  irla_des.py  irla_langchain.py  irla_main.py  irla_main_copy.py  irla_pro.py  irla_pub.py  irla_rag.py  streamlit.py
app/utils/: utils.py
notebooks/: prueba.ipynb
