[project]
name = "proyecto10-juanma-iriondo-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.9",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.0",
    "langchain-google-genai>=4.2.4",
    "langchain-groq>=1.1.2",
    "langchain-ollama>=1.1.0",
    "pydantic>=2.13.4",
    "pypdf>=6.12.2",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "streamlit==1.57.0",
    "tiktoken>=0.13.0",
]

[dependency-groups]
dev = [
    "black>=26.5.1",
    "mypy>=2.1.0",
    "pytest>=9.0.3",
    "ruff>=0.15.15",
]
